# pytest-case-provider

./: README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pull-request.yaml
src/pytest_case_provider/: __init__.py  abc.py  case.py  fixture.py  mark.py  model.py  parametrize.py  plugin.py  storage.py  version_range.py
src/pytest_case_provider/case/: decorator.py  generator.py  info.py  provider.py  storage.py
tests/: conftest.py  test_parametrization.py
tests/integration/: inject_case.py  test_inject_cases.py  test_injection.py  test_marks.py  test_pytest_output.py
tests/stub/: feature.py  provider_func.py  simple_testfile.py
tests/unit/case/: test_decorator.py  test_provider.py  test_storage.py
